# 16bit-CPU

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_KOR.md
16bit/include/: utils.hpp
16bit/include/CPU/: CPU.hpp
16bit/include/Combinational/: Adder.hpp
16bit/include/Sequential/: ProgramCounter.hpp  Register.hpp
16bit/src/Combinational/: ControlSignal.cpp  Logic.cpp  Selector.cpp
16bit/src/Gates/: Basic.cpp
16bit/src/Sequential/: ControlUnit.cpp
include/: types.hpp
include/CPU/: ALU.hpp  CPU.hpp
include/Combinational/: Comparator.hpp  ControlSignal.hpp  Decoder.hpp  Logic.hpp  Selector.hpp  Shifter.hpp
include/Gates/: Basic.hpp
include/Sequential/: ControlUnit.hpp  FlipFlop.hpp  Latch.hpp  Memory.hpp  RegisterFile.hpp
src/: utils.cpp
src/CPU/: ALU.cpp  CPU.cpp
src/Combinational/: Adder.cpp  Comparator.cpp  Decoder.cpp  Shifter.cpp
src/Sequential/: FlipFlop.cpp  Latch.cpp  Memory.cpp  ProgramCounter.cpp  Register.cpp  RegisterFile.cpp
